# SPDX-License-Identifier: LGPL-3.0-only
# dcf-ws-bridge — a minimal, stateless WebSocket↔UDP relay so a browser WASM
# client can join the plaintext DCF mesh. It carries opaque datagrams only (the
# DCF codec lives in the browser); it never parses a frame. Deploy behind
# WireGuard — the wire is plaintext by design (Documentation/DCF_SECURITY_EXPOSURE.md).
[package]
name = "dcf-ws-bridge"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-only"
publish = false

[[bin]]
name = "dcf-ws-bridge"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "io-util"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
